[refactor,fix]: scrollbar added,minor touchups

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,21 @@
   padding: 0;
   font-family: "Kanit", sans-serif;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  width: 10px;
+}
